# kakao-exporteds-analyser

./: .gitignore  README.md  main.py  pyproject.toml
design/: mainform.py  mainform.ui
toolkit/: parser.py
