[tool.poetry]
name = "kakao-exporteds-analyser"
version = "0.1.0"
description = ""
authors = ["Hyun Park <hyunp.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.7.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pyinstaller = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
